--- a/html/wp-content/themes/storefront/style.css
+++ b/html/wp-content/themes/storefront/style.css
@@ -539,6 +539,11 @@ body {
     overflow-x: hidden
 }
 
+#wpadminbar {
+    z-index: 50 !important;
+    position: relative !important;
+}
+
 .site {
     overflow-x: hidden
 }
@@ -547,6 +552,7 @@ body {
 .header-widget-region {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 }
+
 
 .site-header.on,
 .site-header.scroll{
@@ -560,7 +566,7 @@ body {
 }
 
 .site-header {
-    position: fixed;
+    position: relative;
     left: 0;
     right: 0;
     background-color: transparent !important;
@@ -570,6 +576,12 @@ body {
     z-index: 999;
     transition: all .4s;
 }
+
+.site-header.scroll {
+    position: fixed !important;
+    top: 0 !important;
+}
+
 
 .site-header .site-logo-anchor,
 .site-header .site-logo-link,
@@ -659,7 +671,11 @@ body {
 }
 
 .site-content {
-    outline: none
+    outline: none;
+    position: relative;
+    top: 0;
+    left: 0;
+    margin-top: -122px;
 }
 
 .page-template-template-homepage:not(.has-post-thumbnail) .site-main {
@@ -1956,6 +1972,151 @@ button.menu-toggle::after {
     color: #e8340c;
 }
 
+.swiper#main .swiper-slide { width: 100vw; height: 100vh; overflow: hidden; }
+
+    .swiper#main .swiper-slide img {
+        animation: scaling 6s ease-in-out infinite; 
+        width: 100%; 
+        height: 100%;
+        object-fit: cover;
+    }
+
+    @keyframes scaling { from { transform: scale(1.0); } to { transform: scale(1.11); } }
+
+    .swiper#main .swiper-slide .textwrap {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 15%;
+        z-index: 1;
+    }
+    .swiper#main .swiper-slide .textwrap p {
+        color: #fff;
+        font-size: 30px;
+        animation: text2 6s ease-in-out infinite;
+    }
+
+    .swiper#main .swiper-slide .textwrap h2 {
+        color: white;
+        font-size: 80px;
+        letter-spacing: -5px;
+        text-shadow: 0 0 3px rgba(0,0,0,.7);
+        animation: text1 6s ease-in-out infinite;
+    }
+    .swiper#main .swiper-slide .textwrap h2 span {
+        font-size: 35px;
+        letter-spacing: 0;
+        margin-left: 5px;
+    }
+
+    .swiper#main .thumbline { 
+        width: 100%;
+        position: absolute; 
+        left: 0;
+        bottom: 20%;
+        height: 1px; 
+        background-color: #fff;
+        z-index: 1;
+    }
+
+    .swiper#main .baseline {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 15%;
+        width: 1px;
+        background-color: #fff;
+        z-index: 1;
+    }
+    .swiper#main .baseline .getinquery {
+        position: absolute;
+        right: 100%;
+        top: 80%;
+        bottom: 0;
+        min-width: 280px;
+    }
+
+    .swiper#main .baseline .getinquery a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: url('./images/buttoncolor.png') no-repeat center/cover;
+        padding-left: 15%; 
+        padding-top: 20%;
+    }
+    .swiper#main .baseline .getinquery a span {
+        display: block;
+        color: #fff;
+    }
+
+    .swiper#main .baseline .getinquery a span:first-child {
+        font-size: 30px;
+    }
+
+    .swiper#main .baseline .getinquery a span:last-child {
+        font-size: 20px;
+    }
+
+    .swiper#main .swiper-pagination {
+        top: calc(80% - 1px);
+        bottom: unset;
+        left: 10%;
+        display: flex;
+    }
+
+    .swiper#main .swiper-pagination-bullet {
+        width: 50px;
+        height: auto;
+        background-color: transparent;
+        text-align: left;
+        border-radius: 0;
+        font-size: 1.5rem;
+        transition: width .4s ease-in-out;
+    }
+    .swiper#main .swiper-pagination-bullet.swiper-pagination-bullet-active {
+        opacity: 1;
+        color: white;
+    }
+
+    .swiper#main .swiper-pagination-bullet {
+        opacity: .6;
+        color: white;
+        position: relative;
+    }
+
+    .swiper#main .swiper-pagination-bullet-active{
+        width: 100px;
+    }
+
+    .swiper#main .swiper-pagination-bullet.swiper-pagination-bullet-active > span:last-child {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 100%;
+        height: 2px;
+        background-color: #fff;
+    }
+
+    .swiper#main .swiper-pagination-bullet.swiper-pagination-bullet-active > span:last-child::after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 0;
+        transition: width 6s;
+        height: 3px;
+        background-color:#e8340c;
+        z-index: 2;
+    }
+
+    .swiper#main .swiper-pagination-bullet.swiper-pagination-bullet-active > span.animate::after {
+        width: 100%;
+    }
+
+    @keyframes text1 { from { opacity: 0; transform: translateX(4%);} to { opacity: 1; transform: translateX(0);}} 
+
+    @keyframes text2 { from { opacity: 0; transform: translateX(4%);} to { opacity: 1; transform: translateX(0);}} 
 
 
 @media(min-width: 768px) {
@@ -1970,7 +2131,6 @@ button.menu-toggle::after {
     table.shop_table_responsive tbody tr th {
         text-align: left
     }
-ƒ
     .site-header {
         padding-bottom: 0;
     }
@@ -2015,6 +2175,14 @@ button.menu-toggle::after {
 
     .main-navigation ul.menu > li.menu-item-has-children > a::after {
         content: none !important;
+    }
+
+    .scroll .main-navigation ul.menu > li > a {
+        color: #747474 !important;
+    }
+
+    .scroll .main-navigation ul.menu > li > a:hover {
+        color: #e8340c !important;
     }
 
     .woocommerce-active .site-header .main-navigation {
@@ -2649,9 +2817,9 @@ button.menu-toggle::after {
         color: #e8340c;
     }
 
-    .lang > button:hover {
-        background-color: transparent;
-        color: #fff;
+    .scroll .lang > button {
+        color: #e8340c !important;
+        background-color: transparent !important;
     }
 
     .lang > button:focus {
@@ -2760,106 +2928,14 @@ button.menu-toggle::after {
         margin-right: 0
     }
 
-    .swiper#main .swiper-slide { width: 100vw; height: 100vh; overflow: hidden; }
-    .swiper#main .swiper-slide img {
-        animation: scaling 6s ease-in-out infinite; 
-        width: 100%; 
-        height: 100%;
-        object-fit: cover;
-    }
+}
 
-    @keyframes scaling { from { transform: scale(1.0); } to { transform: scale(1.11); } }
-
-    .swiper#main .swiper-slide .textwrap {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        left: 15%;
-        z-index: 1;
+@media (min-width: 1024px) {
+    div.swiper#main {
+        width: 100% !important;
+        height: 100% !important;
+        top: -122px !important;
     }
-    .swiper#main .swiper-slide .textwrap p {
-        color: #fff;
-        font-size: 30px;
-        animation: text2 6s ease-in-out infinite;
-    }
-
-    .swiper#main .swiper-slide .textwrap h2 {
-        color: white;
-        font-size: 80px;
-        letter-spacing: -5px;
-        text-shadow: 0 0 3px rgba(0,0,0,.7);
-        animation: text1 6s ease-in-out infinite;
-    }
-    .swiper#main .swiper-slide .textwrap h2 span {
-        font-size: 35px;
-        letter-spacing: 0;
-        margin-left: 5px;
-    }
-
-    .swiper#main .thumbline { 
-        width: 100%;
-        position: absolute; 
-        left: 0;
-        bottom: 20%;
-        height: 1px; 
-        background-color: #fff;
-        z-index: 1;
-    }
-    .swiper#main .swiper-pagination {
-        top: calc(80% - 1px);
-        bottom: unset;
-        left: 10%;
-        display: flex;
-    }
-
-    .swiper#main .swiper-pagination-bullet {
-        width: 100px;
-        height: auto;
-        background-color: transparent;
-        text-align: left;
-        border-radius: 0;
-        font-size: 1.5rem;
-    }
-    .swiper#main .swiper-pagination-bullet.swiper-pagination-bullet-active {
-        opacity: 1;
-        color: white;
-    }
-
-    .swiper#main .swiper-pagination-bullet {
-        opacity: .6;
-        color: white;
-        position: relative;
-    }
-
-    .swiper#main .swiper-pagination-bullet.swiper-pagination-bullet-active > span:last-child {
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 100%;
-        height: 2px;
-        background-color: #fff;
-    }
-
-    .swiper#main .swiper-pagination-bullet.swiper-pagination-bullet-active > span:last-child::after {
-        content: '';
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 0;
-        transition: width 6s;
-        height: 3px;
-        background-color:#e8340c;
-        z-index: 2;
-    }
-
-    .swiper#main .swiper-pagination-bullet.swiper-pagination-bullet-active > span.animate::after {
-        width: 100%;
-    }
-
-    @keyframes text1 { from { opacity: 0; transform: translateX(4%);} to { opacity: 1; transform: translateX(0);}} 
-
-    @keyframes text2 { from { opacity: 0; transform: translateX(4%);} to { opacity: 1; transform: translateX(0);}} 
 }
 
 @media (max-width: 1024px) {
@@ -2888,6 +2964,7 @@ button.menu-toggle::after {
 
     button#site-navigation-menu-toggle {
         display: block !important;
+        z-index: 56 !important;
     }
 
     .lang {
@@ -3045,4 +3122,72 @@ button.menu-toggle::after {
     button.menu-toggle {
         z-index: 51;
     }
+}
+
+@media (max-width: 670px) {
+    .swiper#main .swiper-slide .textwrap {
+        left: 50% !important;
+        transform: translate(-50%,-50%) !important;
+    }
+}
+
+@media (max-width: 550px) {
+    header { 
+        padding: 0 10px !important;
+    }
+
+    button.menu-toggle {
+        right: 10px;
+    }
+}
+
+@media (max-width: 782px) {
+    html{ 
+        margin-top: 0 !important;
+     }
+     
+     .getinquery {
+        min-width: 180px !important;
+     }
+
+     .getinquery a {
+        padding-top: 33% !important;
+     }
+
+     .getinquery a span:first-child {
+        font-size: 20px !important;
+     }
+
+     .getinquery a span:last-child {
+        font-size: 15px !important;
+     }
+}
+
+@media (max-width: 768px) {
+    .swiper#main .swiper-slide .textwrap h2 {
+        font-size: 50px !important;
+    }
+
+    .swiper#main .swiper-slide .textwrap p {
+        font-size: 25px !important;
+    }
+}
+
+@media (max-width: 540px) {
+    .getinquery {
+        min-width: 130px !important;
+    }
+}
+
+@media (max-width: 460px) {
+    .site-branding .site-title a {
+        width: 157px !important;
+        height: 26px !important;
+        background-size: 73% !important;
+    }
+
+    .handheld-navigation {
+        min-width: 200px !important;
+    }
+
 }
